fix: add styles align form

--- a/styles/password.css
+++ b/styles/password.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 340px;
+  align-items: center;
 }
 
 .form_container div {
@@ -52,6 +53,7 @@ body {
 .form {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .form div {
